# ruxpy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  USAGE.md  flake.nix  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: CI.yml  build-wheels.yml
ruxpy/: __init__.py  beam.py  cli.py  config.py  course.py  scan.py  starlog.py  start.py  utility.py  warp.py
ruxpy/utils/: config.py  course.py  init.py  messages.py  starlog.py
src/: blob.rs  courses.rs  diff.rs  lib.rs  ruxpy_tree.rs  spacedock.rs  starlog.rs
tests/: __init__.py  conftest.py  test_cli.py  test_objects.py  test_starlog.py  test_utilities.py
