[package]
name = "ruxpy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ruxpy"
crate-type = ["cdylib"]

[dependencies]
ignore = "0.4.23"
pyo3 = "0.25.0"
serde = "1.0.228"
serde_json = "1.0.145"
sha3 = "0.10.8"
tempfile = "3.23.0"
walkdir = "2.5.0"
