[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "ruxpy"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "click>=8.1.8",
    "pytest>=8.3.5",
]
[tool.maturin]
features = ["pyo3/extension-module"]

[project.scripts]
ruxpy = "ruxpy.cli:main"

