[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "ruxpy"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "black>=24.8.0",
    "click>=8.1.8",
    "flake8>=5.0.4",
    "pre-commit>=3.5.0",
    "pytest>=8.3.5",
    "toml>=0.10.2",
    "tomlkit>=0.13.3",
]
[tool.maturin]
features = ["pyo3/extension-module"]

[project.scripts]
ruxpy = "ruxpy.cli:main"

